Closed
Bug 313669
Opened 20 years ago
Closed 20 years ago
[FIX]Flash content fails to display when it hits/pulls from bfcache.
Categories
(Core :: DOM: Navigation, defect, P1)
Core
DOM: Navigation
Tracking
()
VERIFIED
FIXED
mozilla1.8rc1
People
(Reporter: stephend, Assigned: bzbarsky)
References
Details
(Keywords: regression, verified1.8)
Attachments
(2 files)
|
2.34 KB,
patch
|
bryner
:
review+
bryner
:
superreview+
mtschrep
:
approval1.8rc1+
|
Details | Diff | Splinter Review |
|
2.36 KB,
patch
|
Details | Diff | Splinter Review |
Summary: Flash content fails to display when it hits/pulls from bfcache.
With browser.sessionhistory.max_total_viewers set to -1, I experience this bug. If I change that to 0, this works fine.
Regression Range:
Works: 2005-10-21-08 trunk
Fails: 2005-10-22-08 trunk
This affects the branch, too: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b5) Gecko/20051024 Firefox/1.5 displays this problem.
Suspected bug is bug 311791.
Steps to Reproduce:
1. Load http://www.macromedia.com
2. Load another page (any page)
3. Click Back
Expected Results:
Flash content (middle of the page) loads and displays.
Actual Results:
No Flash content displays.
| Assignee | ||
Comment 1•20 years ago
|
||
On trunk I want a slightly different solution, but let's get this in so it can be verified, etc, as needed. Then I'll do some on-top-of-this cleanup on the trunk.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #200687 -
Flags: superreview?(bryner)
Attachment #200687 -
Flags: review?(bryner)
| Assignee | ||
Updated•20 years ago
|
Flags: blocking1.8rc1?
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Target Milestone: --- → mozilla1.8rc1
| Assignee | ||
Updated•20 years ago
|
Summary: Flash content fails to display when it hits/pulls from bfcache. → [FIX]Flash content fails to display when it hits/pulls from bfcache.
Updated•20 years ago
|
Attachment #200687 -
Flags: superreview?(bryner)
Attachment #200687 -
Flags: superreview+
Attachment #200687 -
Flags: review?(bryner)
Attachment #200687 -
Flags: review+
| Assignee | ||
Comment 2•20 years ago
|
||
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•20 years ago
|
Flags: blocking1.8rc1? → blocking1.8rc1+
Updated•20 years ago
|
Attachment #200687 -
Flags: approval1.8rc1?
| Assignee | ||
Comment 3•20 years ago
|
||
Filed bug 313687 on the followup trunk cleanup.
| Reporter | ||
Comment 4•20 years ago
|
||
Verified FIXED on trunk using my self-built SeaMonkey build on Windows XP.
checkout start: Mon Oct 24 20:38:58 USEST 2005
mozilla/layout/base/nsPresShell.cpp U
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Attachment #200687 -
Flags: approval1.8rc1? → approval1.8rc1+
| Assignee | ||
Comment 5•20 years ago
|
||
| Reporter | ||
Comment 7•20 years ago
|
||
Verified FIXED on 1.8 branch:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20051025 Firefox/1.5
Keywords: fixed1.8 → verified1.8
Component: History: Session → Document Navigation
QA Contact: history.session → docshell
You need to log in
before you can comment on or make changes to this bug.
Description
•