Fix restarting of plugins when restoring from bfcache.  Bug 313669, r+sr=bryner